erDiagram
    TENANT ||--o{ ORGANIZATION : contains
    TENANT ||--o{ DEPARTMENT : isolates
    ORGANIZATION o|--o{ ORGANIZATION : parent
    ORGANIZATION ||--o{ DEPARTMENT : contains
    DEPARTMENT o|--o{ DEPARTMENT : parent
    TENANT o|--o{ USER : belongs
    ORGANIZATION o|--o{ USER : belongs
    DEPARTMENT o|--o{ USER : belongs
    USER ||--o{ SESSION : authenticates
    USER ||--o{ PASSWORD_HISTORY : remembers
    USER ||--o{ USER_ROLE : assigned
    ROLE ||--o{ USER_ROLE : grants
    ROLE ||--o{ ROLE_PERMISSION : assigned
    PERMISSION ||--o{ ROLE_PERMISSION : grants
    PERMISSION ||--o| PAGE : page_subtype
    PERMISSION ||--o| BUTTON : button_subtype
    PAGE o|--o{ PAGE : parent
    PAGE ||--o{ BUTTON : owns
    PAGE ||--o{ PAGE_API : explicitly_binds
    PERMISSION ||--o{ PAGE_API : read_api
    BUTTON ||--o{ BUTTON_API : explicitly_binds
    PERMISSION ||--o{ BUTTON_API : operation_api
    ROLE ||--o{ ROLE_DATA_SCOPE : standard
    ROLE ||--o{ ELEVATED_SCOPE : approved
    ELEVATED_SCOPE ||--o{ SCOPE_TARGET : targets
    USER o|--o{ SCOPE_TARGET : user_target
    DEPARTMENT o|--o{ SCOPE_TARGET : department_target
    ORGANIZATION o|--o{ SCOPE_TARGET : organization_target
    TENANT o|--o{ SCOPE_TARGET : tenant_target
    USER o|--o{ AUDIT_LOG : actor
    USER ||..o{ APPROVAL : actors_by_public_uuid
    APPROVAL ||..o{ ELEVATED_SCOPE : approvalRef
    APPROVAL o|..o{ USER_ROLE : approvalRef
    APPROVAL o|..o{ ROLE_PERMISSION : approvalRef

    USER {
      bigint id PK "内部，不对外返回"
      uuid userId UK
      string username UK
      string passwordHash
      string status
      datetime expiresAt
      boolean mfaEnabled
      string mfaSecret "AES-GCM 密文"
      bigint mfaLastStep "防重放"
    }
    ROLE {
      bigint id PK
      uuid roleId UK
      string code UK
      enum roleType "BUSINESS SYSTEM SECURITY AUDIT"
      enum status
    }
    PERMISSION {
      uuid id PK
      string code UK
      enum type "PAGE BUTTON API MANAGEMENT"
      enum requiredRoleType
      string method "API 真实方法"
      string path "与 method 组成唯一键"
      string resource
      string action
      enum status
    }
    USER_ROLE {
      bigint userId PK,FK
      bigint roleId PK,FK
      datetime assignedAt
      datetime expiresAt
      datetime revokedAt
      uuid grantedBy
      uuid revokedBy
      string grantReason
      string revokeReason
      uuid approvalRef
    }
    ROLE_PERMISSION {
      bigint roleId PK,FK
      uuid permissionId PK,FK
      datetime assignedAt
      datetime expiresAt
      datetime revokedAt
      uuid grantedBy
      uuid revokedBy
      string grantReason
      string revokeReason
      uuid approvalRef
    }
    APPROVAL {
      uuid id PK
      enum kind
      enum status "REQUESTED APPROVED EXECUTED REVIEWED"
      json payload "按 kind 严格校验的不可变申请"
      string reason
      datetime expiresAt
      uuid applicantId
      uuid approverId
      uuid executorId
      uuid reviewerId
    }
    ELEVATED_SCOPE {
      uuid id PK
      bigint roleId FK
      string resource
      enum scopeType "CUSTOM ALL"
      uuid approvalRef
      string reason
      datetime validFrom
      datetime expiresAt "必须大于 validFrom"
      datetime revokedAt
    }
    SCOPE_TARGET {
      uuid id PK
      uuid elevatedScopeId FK
      enum targetType
      uuid targetId "与类型、授权组成唯一键"
      uuid targetUserId FK
      uuid targetDepartmentId FK
      uuid targetOrganizationId FK
      uuid targetTenantId FK
    }
